Complete Railway Backend Setup

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-# FastAPI Backend Requirements for Production Deployment
+# Railway Production Requirements
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 python-multipart==0.0.6
@@ -7,6 +7,4 @@ numpy==1.24.3
 opencv-python-headless==4.8.1.78
 deepface==0.0.79
 tensorflow==2.13.0
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
 python-dotenv==1.0.0
