Complete Railway Deployment Setup

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-# Railway Production Requirements
+# Railway Production Requirements - Optimized for fast deployment
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 python-multipart==0.0.6
